# aibro

./: .env.example  .gitignore  main.py  pyproject.toml
src/agents/code_agent/: __init__.py  context.py  graph.py  prompts.py
src/agents/code_agent/tools/: __init__.py  bash_tools.py  file_tools.py
src/agents/paper_agent/: __init__.py  context.py  graph.py  prompts.py  utils.py
src/agents/paper_agent/tools/: __init__.py  file_tools.py  paper_tools.py
